--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,7 +1,10 @@
 Escher CMS Change History
 =========================
 
-Version 0.9.1 [TBD]
+Version 0.9.2 [TBD]
+	integrated branch management: production, staging and development branches
+
+Version 0.9.1 [not released]
 	miscellaneous bug fixes
 	added query plugin
 	added "private" attribute to <et:core:scope> tag
