--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -5,6 +5,11 @@ Version 0.9.2 [TBD]
 	integrated branch management: production, staging and development branches
 	support for separate read/write databases
 	drag & drop ordering of pages
+	site search plugin
+	atom/rss feed plugin
+	<et:design:snippet> now accepts arbitrary parameters passed to snippet
+	new tag: <et:design:param>, for accessing snippet parameters
+	new tag: <et:pages:excerpt>
 	new tags to assist with navigation previous/next links when iterating items
 	new default template
 
