--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -12,7 +12,7 @@ Version 0.9.2 [TBD]
 	new tag: <et:pages:excerpt>
 	new tag: <et:core:escape_url>
 	new tags to assist with navigation previous/next links when iterating items
-	new default template
+	new default theme
 	comments plugin:
 		new default snippets
 		change: by default, comment processing now done prior to saving comment instead of after retrieving it
