--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,7 +1,7 @@
 Escher CMS Change History
 =========================
 
-Version 0.9.2 [TBD]
+Version 0.9.2 [2011-07-01]
 	integrated branch management: production, staging and development branches
 	support for separate read/write databases
 	drag & drop ordering of pages
